Fix hero section overflow

--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -14,18 +14,18 @@
 
 .section--hero {
     padding-top: 12rem;
-    padding-bottom: 14rem;
+    padding-bottom: 16rem;
     background: $secondary url(../img/geo-pattern.png);
 
     @media (min-width: $bp-s) {
         padding-top: 15rem;
-        padding-bottom: 19rem;
+        padding-bottom: 21rem;
     }
 }
 
 .section--approach {
     transform: skewY(6deg);
-    margin-top: -7rem;
+    margin-top: -9rem;
     overflow: hidden;
 
     .container {
